--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -27,6 +27,7 @@
     z-index: 2;
     opacity: 1;
     transition: opacity 0.3s ease-in;
+    -webkit-transition: opacity 0.3s ease-in;
   }
   &__item {
     font-weight: 600;
